--- a/style.css
+++ b/style.css
@@ -72,23 +72,6 @@ input {
   opacity: 0.5;
 }
 
-.geschlecht {
-  margin-left: 7.5%;
-}
-
-.geschlecht input {
-  margin: 0;
-  margin-top: 15px;
-  margin-left: 15px;
-  width: 2%;
-  height: 15px;
-}
-
-#berechnen {
-  width: 10%;
-  height: 25px;
-}
-
 /* Infotext zu Alkohol am unteren Seitenende */
 footer {
   position: fixed;
@@ -106,12 +89,31 @@ h4 {
   margin-top: 0;
 }
 
+
+/*Rechner*/
 main {
   position: fixed;
   bottom: 35%;
   color: #f1f1f1;
   width: 100%;
   padding-left: 40%;
+}
+
+.geschlecht {
+  margin-left: 7.5%;
+}
+
+.geschlecht input {
+  margin: 0;
+  margin-top: 15px;
+  margin-left: 15px;
+  width: 2%;
+  height: 15px;
+}
+
+#berechnen {
+  width: 10%;
+  height: 25px;
 }
 
 header .logo {
@@ -122,31 +124,21 @@ header .logo {
   padding: 20px;
 }
 
-/* The Modal (background) */
 .popup {
   display: none;
-  /* Hidden by default */
   position: fixed;
-  /* Stay in place */
   z-index: 1;
-  /* Sit on top */
   padding-top: 15%;
-  /* Location of the box */
   left: 0;
   top: 0;
   width: 100%;
-  /* Full width */
   height: 100%;
-  /* Full height */
   overflow: auto;
-  /* Enable scroll if needed */
   background-color: rgb(0, 0, 0);
-  /* Fallback color */
   background-color: rgba(0, 0, 0, 0.4);
-  /* Black w/ opacity */
 }
 
-/* Modal Content/Box */
+
 .popup-inhalt {
   background-color: #fefefe;
   margin: auto;
